# haratsan-sdk

./: Makefile  README.md
go/: README.md  client.go  go.mod  go.sum
go/example/: main.go
go/gen_pb/bot_apipb/: bot_api.pb.go  bot_api_grpc.pb.go
proto/: bot_api.proto
python/: README.md  pyproject.toml
python/example/: main.py
python/haratsan_sdk/: __init__.py  client.py
python/haratsan_sdk/gen_pb/: bot_api_pb2.py  bot_api_pb2_grpc.py
